:new: update roadmap

--- a/index.html
+++ b/index.html
@@ -61,8 +61,13 @@
                 <li>Getting Started</li>
                 <li>Python and HTML</li>
                 <li>Overview</li>
-                <li>Python Variables</li>
-                <li>Python Shell</li>
+                <li>Python</li>
+                <ul class="nested-points">
+                  <li>Variables</li>
+                  <li>Shell</li>
+                  <li>Data Types</li>
+                  <li>Control Flow</li>
+                </ul>
               </ul>
             </main>
           </div>
@@ -71,7 +76,16 @@
             <aside class="col"><h2>Week 2</h2></aside>
             <main class="col-9">
               <ul class="points">
-                <li>Python</li>
+                <li>Python (Continued)</li>
+                <ul class="nested-points">
+                  <li>Functions</li>
+                  <li>Recursion</li>
+                  <li>Scope</li>
+                  <li>Object Oriented Programming</li>
+                  <li>Iterators</li>
+                  <li>Generators</li>
+                  <li>Decorators</li>
+                </ul>
               </ul>
             </main>
           </div>
@@ -81,6 +95,13 @@
             <main class="col-9">
               <ul class="points">
                 <li>Databases</li>
+                <li>SQLite</li>
+                <ul class="nested-points">
+                  <li>Intro</li>
+                  <li>Tables</li>
+                  <li>Queries</li>
+                  <li>Joins</li>
+                </ul>
               </ul>
             </main>
           </div>
@@ -89,7 +110,11 @@
             <aside class="col"><h2>Week 4</h2></aside>
             <main class="col-9">
               <ul class="points">
-                <li>Databases</li>
+                <li>SQLite (Continued)</li>
+                <ul class="nested-points">
+                  <li>Data Manipulation Language (DML)</li>
+                  <li>Data Definition Language (DDL)</li>
+                </ul>
               </ul>
             </main>
           </div>
@@ -99,6 +124,12 @@
             <main class="col-9">
               <ul class="points">
                 <li>Django</li>
+                <ul class="nested-points">
+                  <li>Introduction</li>
+                  <li>History</li>
+                  <li>Overview</li>
+                  <li>Admin</li>
+                </ul>
               </ul>
             </main>
           </div>
@@ -107,7 +138,12 @@
             <aside class="col"><h2>Week 6</h2></aside>
             <main class="col-9">
               <ul class="points">
-                <li>Django</li>
+                <li>Django (Continued)</li>
+                <ul class="nested-points">
+                  <li>Modeling Data</li>
+                  <li>Creating Views</li>
+                  <li>Styling Templates</li>
+                </ul>
               </ul>
             </main>
           </div>
@@ -116,7 +152,11 @@
             <aside class="col"><h2>Week 7</h2></aside>
             <main class="col-9">
               <ul class="points">
-                <li>Django</li>
+                <li>Django (Continued)</li>
+                <ul class="nested-points">
+                  <li>Authentication</li>
+                  <li>Packages</li>
+                </ul>
               </ul>
             </main>
           </div>
@@ -125,7 +165,11 @@
             <aside class="col"><h2>Week 8</h2></aside>
             <main class="col-9">
               <ul class="points">
-                <li>Django</li>
+                <li>Django (Continued)</li>
+                <ul class="nested-points">
+                  <li>Admin Theme</li>
+                  <li>Debug Toolbar</li>
+                </ul>
                 <li>Presentations</li>
               </ul>
             </main>
