:heavy_plus_sign: add day 3 content

--- a/two.html
+++ b/two.html
@@ -29,6 +29,7 @@
             <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
               <li><a class="dropdown-item" href="one.html">Day One</a></li>
               <li><a class="dropdown-item active" href="two.html">Day Two</a></li>
+              <li><a class="dropdown-item" href="three.html">Day Three</a></li>
               <!-- <li><hr class="dropdown-divider"></li>
               <li><a class="dropdown-item" href="final.html">Final Project</a></li> -->
             </ul>
@@ -54,13 +55,9 @@
           <li>Take Home Review</li>
           <li>Data Types</li>
           <li>Operators</li>
+          <li>Daily Challenge</li>
           <li>Flow Control</li>
           <li>Functions</li>
-          <li>Daily Challenge</li>
-          <li>Recursion</li>
-          <li>Scope</li>
-          <li>Object Oriented Programming</li>
-          <li></li>
         </ul>
       </main>
     </div><!-- end Concepts -->
@@ -88,8 +85,6 @@
             <li>W3Schools Reference: <a href="https://www.w3schools.com/python/python_datatypes.asp" target="_blank">Python Data Types</a></li>
           </ul>
           <li>Operators</li>
-          <li>Flow Control</li>
-          <li>Functions</li>
         </ul>
       </main>
     </div>
@@ -122,15 +117,8 @@
       </aside>
       <main class="col-9">
         <ul class="points">
-          <li>Recursion</li>
-          <li>Scope</li>
-          <li>Object Oriented Programming</li>
-          <li>Advanced</li>
-          <ul class="nested-points">
-            <li>Generators</li>
-            <li>Iterators</li>
-            <li>Decorators</li>
-          </ul>
+          <li>Flow Control</li>
+          <li>Functions</li>
         </ul>
       </main>
     </div>
