--- a/three.html
+++ b/three.html
@@ -27,9 +27,9 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" role="button" aria-expanded="true">Lessons</a>
             <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-              <li><a class="dropdown-item active" href="one.html">Day One</a></li>
+              <li><a class="dropdown-item" href="one.html">Day One</a></li>
               <li><a class="dropdown-item" href="two.html">Day Two</a></li>
-              <li><a class="dropdown-item" href="three.html">Day Three</a></li>
+              <li><a class="dropdown-item active" href="three.html">Day Three</a></li>
               <!-- <li><hr class="dropdown-divider"></li>
               <li><a class="dropdown-item" href="final.html">Final Project</a></li> -->
             </ul>
@@ -42,7 +42,7 @@
   <div class="container padtop3">
     <div class="row">
       <div class="col text-center">
-        <h1>Day 1</h1>
+        <h1>Day 3</h1>
       </div>
     </div>
 
@@ -52,57 +52,38 @@
       </aside>
       <main class="col-9">
         <ul class="points">
-          <li>Introductions</li>
-          <li>What is Backend Programming?</li>
-          <li>Getting Started</li>
+          <li>Take Home Review</li>
+          <li>Recursion</li>
+          <li>Scope</li>
           <li>Daily Challenge</li>
-          <li>Python and HTML</li>
-          <li>Overview</li>
-          <li>Python Variables</li>
-          <li>Python Shell</li>
+          <li>Object Oriented Programming</li>
+          <li>Generators</li>
+          <li>Iterators</li>
+          <li>Decorators</li>
         </ul>
       </main>
     </div><!-- end Concepts -->
 
     <div class="row section">
       <aside class="col">
-        <h2>Introductions</h2>
+        <h2>Take Home Review</h2>
       </aside>
       <main class="col-9">
         <ul class="points">
-          <li>Instructor/TA Intros</li>
-          <li>Icebreaker</li>
-          <li>Expectations</li>
+          <li>Pig Latin Solo Challenge</li>
+          <li>Questions?</li>
         </ul>
       </main>
     </div>
 
     <div class="row section">
       <aside class="col">
-        <h2>What is Backend Programming?</h2>
+        <h2>The Art of the Snake <span>	&#128013;</span> (Part 3)</h2>
       </aside>
       <main class="col-9">
         <ul class="points">
-          <li>Backend Languages and Frameworks</li>
-          <ul class="nested-points">
-            <li>Python</li>
-            <li>Django</li>
-          </ul>
-        </ul>
-      </main>
-    </div>
-
-    <div class="row section">
-      <aside class="col">
-        <h2>Getting Started</h2>
-      </aside>
-      <main class="col-9">
-        <ul class="points">
-          <li>Tools</li>
-          <ul class="nested-points">
-            <li>Visual Studio Code (<a href="https://code.visualstudio.com/download" target="_blank">Download here</a>)</li>
-            <li>Python Interpreter</li>
-          </ul>
+          <li>Recursion</li>
+          <li>Scope</li>
         </ul>
       </main>
     </div>
@@ -113,15 +94,7 @@
       </aside>
       <main class="col-9">
         <ul class="points">
-          <li>Download VSCode and install the following plugins:</li>
-          <ul class="nested-points">
-            <li>Python (<a href="https://marketplace.visualstudio.com/items?itemName=ms-python.python" target="_blank">More Info</a>)</li>
-            <li>Python Snippets (<a href="https://marketplace.visualstudio.com/items?itemName=frhtylcn.pythonsnippets" target="_blank">More Info</a>)</li>
-            <li>Python Preview (<a href="https://marketplace.visualstudio.com/items?itemName=dongli.python-preview" target="_blank">More Info</a>)</li>
-            <li>Indent Rainbow (<a href="https://marketplace.visualstudio.com/items?itemName=oderwat.indent-rainbow" target="_blank">More Info</a>)</li>
-            <li>Error Lense (<a href="https://marketplace.visualstudio.com/items?itemName=usernamehw.errorlens" target="_blank">More Info</a>)</li>
-            <li>Djaneiro - Django Snippets (<a href="https://marketplace.visualstudio.com/items?itemName=thebarkman.vscode-djaneiro" target="_blank">More Info</a>)</li>
-          </ul>
+          <li>Coding challenge in breakout rooms</li>
         </ul>
       </main>
     </div>
@@ -132,7 +105,6 @@
       </aside>
       <main class="col-9">
         <ul class="points">
-          <li>Make sure everything is working</li>
           <li>Questions?</li>
         </ul>
       </main>
@@ -140,48 +112,21 @@
 
     <div class="row section">
       <aside class="col">
-        <h2>Building on HTML</h2>
+        <h2>The Art of the Snake <span>	&#128013;</span> (Part 4)</h2>
       </aside>
       <main class="col-9">
         <ul class="points">
-          <li>Examples</li>
+          <li>Object Oriented Programming</li>
+          <li>Advanced</li>
+          <ul class="nested-points">
+            <li>Generators</li>
+            <li>Iterators</li>
+            <li>Decorators</li>
+          </ul>
         </ul>
       </main>
     </div>
 
-    <div class="row section">
-      <aside class="col">
-        <h2>Roadmap</h2>
-      </aside>
-      <main class="col-9">
-        <ul class="points">
-          <li>Overview of Course</li>
-          <li>Final Project Goals</li>
-        </ul>
-      </main>
-    </div>
-
-    <div class="row section">
-      <aside class="col">
-        <h2>Python Variables</h2>
-      </aside>
-      <main class="col-9">
-        <ul class="points">
-          <li>W3Schools Reference: <a href="https://www.w3schools.com/python/python_variables.asp" target="_blank">Python Variables</a></li>
-        </ul>
-      </main>
-    </div>
-
-    <div class="row section">
-      <aside class="col">
-        <h2>Python Shell</h2>
-      </aside>
-      <main class="col-9">
-        <ul class="points">
-          <li>Python.org Reference: <a href="https://www.python.org/shell/" target="_blank">Shell</a></li>
-        </ul>
-      </main>
-    </div>
 
     <div class="row section">
       <aside class="col">
@@ -189,8 +134,7 @@
       </aside>
       <main class="col-9">
         <ul class="points">
-          <li>Take some time to use the shell</li>
-          <li>Bring questions for next class!</li>
+          <li></li>
         </ul>
       </main>
     </div>
