--- a/day4.html
+++ b/day4.html
@@ -116,7 +116,7 @@
       </aside>
       <main class="col-9">
         <ul class="points">
-          <li><DNA Sequence Challenge/li>
+          <li>DNA Sequence Challenge</li>
         </ul>
       </main>
     </div>
