added Day 7 and Edited day 6

--- a/seven.html
+++ b/seven.html
@@ -32,7 +32,8 @@
               <li><a class="dropdown-item" href="three.html">Day Three</a></li>
               <li><a class="dropdown-item" href="four.html">Day Four</a></li>
               <li><a class="dropdown-item" href="five.html">Day Five</a></li>
-              <li><a class="dropdown-item active" href="six.html">Day Six</a></li>
+              <li><a class="dropdown-item" href="six.html">Day Six</a></li>
+              <li><a class="dropdown-item active" href="seven.html">Day Seven</a></li>
               <!-- <li><hr class="dropdown-divider"></li>
               <li><a class="dropdown-item" href="final.html">Final Project</a></li> -->
             </ul>
@@ -45,7 +46,7 @@
   <div class="container padtop3">
     <div class="row">
       <div class="col text-center">
-        <h1>Day 6</h1>
+        <h1>Day 7</h1>
       </div>
     </div>
 
@@ -55,9 +56,10 @@
       </aside>
       <main class="col-9">
         <ul class="points">
-          <li>Database Statements, Clauses,</li>
-          <li>and Keywords</li>
+          <li>Database Statements, Clauses,
+            and Keywords (Continued)</li>
           <li>Daily Challenge</li>
+          <li>Database Terms</li>
           <li>Take Home Challenge</li>
         </ul>
       </main>
@@ -69,8 +71,7 @@
       </aside>
       <main class="col-9">
         <ul class="points">
-          <li>Check for DB Browser Install</li>
-          <li>Check for sample DB download</li>
+          <li>Insights and thoughts on SQL Murder Mystery</li>
           <li>Questions?</li>
         </ul>
       </main>
@@ -82,18 +83,10 @@
       </aside>
       <main class="col-9">
         <ul class="points">
-          <li>Select</li>
-          <li>Order By</li>
-          <li>Distinct</li>
-          <li>Where</li>
-          <li>Limit</li>
-          <li>Joins</li>
-          <li>Between</li>
-          <li>IN</li>
-          <li>Like</li>
-          <li>IS Null</li>
+          <li>Joins (Continued)</li>
           <li>Group By</li>
-          <li>Intersection</li>
+          <li>Having</li>
+          <li>SQL Challenges</li>
         </ul>
       </main>
     </div>
@@ -104,7 +97,7 @@
       </aside>
       <main class="col-9">
         <ul class="points">
-          <li>Analytical SQL Challenges</li>
+          <li>SQL Challenge</li>
         </ul>
       </main>
     </div>
@@ -126,7 +119,7 @@
       </aside>
       <main class="col-9">
         <ul class="points">
-          <li>SQL Murder Mystery</li>
+          <li>Database Ideas</li>
         </ul>
       </main>
     </div>
