Updated all nav menus to include pages 5-8

--- a/eight.html
+++ b/eight.html
@@ -34,7 +34,8 @@
               <li><a class="dropdown-item" href="five.html">Day Five</a></li>
               <li><a class="dropdown-item" href="six.html">Day Six</a></li>
               <li><a class="dropdown-item" href="seven.html">Day Seven</a></li>
-              <li><a class="dropdown-item active" href="eight.html">Day Eight</a></li>
+              <li><a class="dropdown-item" href="eight.html">Day Eight</a></li>
+              <li><a class="dropdown-item active" href="nine.html">Day Nine</a></li>
               <!-- <li><hr class="dropdown-divider"></li>
               <li><a class="dropdown-item" href="final.html">Final Project</a></li> -->
             </ul>
@@ -86,6 +87,17 @@
           <li>OLAP Designs</li>
           <li>Database Terms</li>
           <li>Database Design</li>
+        </ul>
+      </main>
+    </div>
+
+    <div class="row section">
+      <aside class="col">
+        <h2>Daily Challenge</h2>
+      </aside>
+      <main class="col-9">
+        <ul class="points">
+          <li>Coding Challenge in Breakout Rooms</li>
         </ul>
       </main>
     </div>
