--- a/eight.html
+++ b/eight.html
@@ -34,8 +34,8 @@
               <li><a class="dropdown-item" href="five.html">Day Five</a></li>
               <li><a class="dropdown-item" href="six.html">Day Six</a></li>
               <li><a class="dropdown-item" href="seven.html">Day Seven</a></li>
-              <li><a class="dropdown-item" href="eight.html">Day Eight</a></li>
-              <li><a class="dropdown-item active" href="nine.html">Day Nine</a></li>
+              <li><a class="dropdown-item active" href="eight.html">Day Eight</a></li>
+              <li><a class="dropdown-item" href="nine.html">Day Nine</a></li>
               <!-- <li><hr class="dropdown-divider"></li>
               <li><a class="dropdown-item" href="final.html">Final Project</a></li> -->
             </ul>
