--- a/six.html
+++ b/six.html
@@ -32,10 +32,10 @@
               <li><a class="dropdown-item" href="three.html">Day Three</a></li>
               <li><a class="dropdown-item" href="four.html">Day Four</a></li>
               <li><a class="dropdown-item" href="five.html">Day Five</a></li>
-              <li><a class="dropdown-item" href="six.html">Day Six</a></li>
+              <li><a class="dropdown-item active" href="six.html">Day Six</a></li>
               <li><a class="dropdown-item" href="seven.html">Day Seven</a></li>
               <li><a class="dropdown-item" href="eight.html">Day Eight</a></li>
-              <li><a class="dropdown-item active" href="nine.html">Day Nine</a></li>
+              <li><a class="dropdown-item" href="nine.html">Day Nine</a></li>
               <!-- <li><hr class="dropdown-divider"></li>
               <li><a class="dropdown-item" href="final.html">Final Project</a></li> -->
             </ul>
